Filtered items now get added to the More lists. Corrected alignment of level 2 nav when it's at right-edge of viewport. Corrected font-size of drop down navigation items. Corrected positioning of mega-dropdown.

--- a/src/scss/mega-dropdown.scss
+++ b/src/scss/mega-dropdown.scss
@@ -1,6 +1,7 @@
 .o-ft-header__mega-dropdown {
   position: absolute;
   left: 0;
+  right: 0;
   padding: 15px 33px;
   min-height: 100px;
   width: 100%;
